@@ -6,3 +6,5 @@ Rado Hrabcak
 Freek Kauffmann
 Aaron Bader
 Ghostcorps (at) gmail.com
+Timur Vafin
+Erland Isaksson
