@@ -7,6 +7,7 @@
    * monthday.sh: also process the last file
    * rorrim.sh: -c (remote) fixes and other tweaks
    * dump.sh: support -z (compress) and -k (encrypt) options
+   * dump.sh: fix the path to rdup and mirror.sh (Timur Vafin)
    * removed grep.sh from rdup-utils
    * tests: added monthday +0 restore test
    * install monthday.sh and rorrim.sh by default
